--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "remark-html": "^13.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3"
